--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 	"devDependencies": {
 		"@types/mocha": "^10.0.3",
 		"@types/node": "18.x",
+		"@types/quill": "^2.0.14",
 		"@types/vscode": "^1.84.0",
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
 		"@typescript-eslint/parser": "^6.9.0",
@@ -71,5 +72,8 @@
 		"mocha": "^10.2.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"quill": "^1.3.6"
 	}
 }
