trying to create box for code language

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
-		"@vscode/codicons": "^0.0.35"
+		"@vscode/codicons": "^0.0.35",
+		"highlight.js": "^11.9.0"
 	}
 }
