--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
 		"mocha": "^10.2.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"@vscode/codicons": "^0.0.35"
 	}
 }
