--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
+		"@types/fs-extra": "^11.0.4",
 		"@types/mocha": "^10.0.3",
 		"@types/node": "18.x",
 		"@types/quill": "^2.0.14",
@@ -79,6 +80,7 @@
 	},
 	"dependencies": {
 		"@vscode/codicons": "^0.0.35",
+		"fs-extra": "^11.2.0",
 		"highlight.js": "^11.9.0"
 	}
 }
