--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 	"dependencies": {
 		"@vscode/codicons": "^0.0.35",
 		"fs-extra": "^11.2.0",
-		"highlight.js": "^11.9.0"
+		"highlight.js": "^11.9.0",
+		"uuid": "^9.0.1"
 	}
 }
