--- a/package.json
+++ b/package.json
@@ -81,13 +81,11 @@
 		"eslint": "^8.52.0",
 		"glob": "^10.3.10",
 		"mocha": "^10.2.0",
-		"tailwindcss": "^3.3.5",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"uuid": "^9.0.1"
 	},
 	"dependencies": {
 		"@vscode/codicons": "^0.0.35",
-		"fs-extra": "^11.2.0",
-		"highlight.js": "^11.9.0",
-		"uuid": "^9.0.1"
+		"highlight.js": "^11.9.0"
 	}
 }
