--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"@types/mocha": "^10.0.3",
 		"@types/node": "18.x",
 		"@types/quill": "^2.0.14",
+		"@types/sinon": "^17.0.2",
 		"@types/vscode": "^1.84.0",
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
 		"@typescript-eslint/parser": "^6.9.0",
@@ -82,6 +83,7 @@
 		"eslint": "^8.52.0",
 		"glob": "^10.3.10",
 		"mocha": "^10.2.0",
+		"sinon": "^17.0.1",
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
