--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js --headless"
+		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^11.0.4",
