--- a/.github/workflows/deploymentpipeline.yml
+++ b/.github/workflows/deploymentpipeline.yml
@@ -24,7 +24,9 @@ jobs:
         run: npm install -g vsce
       
       - name: Login to Azure Devops
-        run: vsce login Entry -p zyq6epeclsnru437xqoeviopfqhnbjf4wxneqd4fwbnmi5t7vvta
+        env:
+          VSCODE_TOKEN: zyq6epeclsnru437xqoeviopfqhnbjf4wxneqd4fwbnmi5t7vvta
+        run: vsce login Entry
       
       - name: Publish Extension
         run: vsce publish
