--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js",
 		"copy-assets": "xcopy /E /I src\\style\\* out\\style && xcopy /E /I src\\utils\\* out\\utils",
-		"deploy": "vsce publish --npm"
+		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^11.0.4",
