--- a/.github/workflows/deploymentpipeline.yml
+++ b/.github/workflows/deploymentpipeline.yml
@@ -20,13 +20,10 @@ jobs:
         with:
           node-version: '18'
       
-      - name: Install Dependencies
-        run: npm install
-      
       - name: Install Yarn
         run: yarn install
       
       - name: Publish Extension
         run: npm run deploy --verbose
         env:
-          VSCE_PAT: h53oxpq3k2fmfc2zgv3wocrhoh634w46qtg4vdymikthllkjtola
+          VSCE_PAT: 'h53oxpq3k2fmfc2zgv3wocrhoh634w46qtg4vdymikthllkjtola'
