--- a/package.json
+++ b/package.json
@@ -52,9 +52,19 @@
 			},
 			{
 				"command": "entry.addDecorator",
-				"title": "addDecorator"
+				"title": "addDecorator",
+				"icon": "$(pencil)"
 			}
 		],
+		"menus": {
+			"editor/title": [
+				{
+					"command": "entry.addDecorator",
+					"group": "navigation",
+					"when": "editorTextFocus"
+				}
+			]
+		},
 		"search": [
 			{
 				"scheme": "vscode-userdata",
