--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js",
-		"copy-assets": "xcopy /E /I /Y \"src\\style\\*\" \"out\\style\\\" && xcopy /E /I /Y \"src\\utils\\*\" \"out\\utils\\\"",
+		"copy-assets": "cp -R src/style/* out/style && cp -R src/utils/* out/utils",
 		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
