--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run copy-assets && npm run compile",
+		"vscode:prepublish": "npm run compile && npm run copy-assets",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
