--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "entry",
 	"publisher": "entry",
 	"description": "Write notes for your code",
-	"version": "0.0.95",
+	"version": "0.0.97",
 	"engines": {
 		"vscode": "^1.83.0"
 	},
@@ -79,7 +79,7 @@
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js",
-		"copy-assets": "cp -R src/style/* out/style && cp -R src/utils/* out/utils",
+		"copy-assets": "xcopy /E /I /Y \"src\\style\\*\" \"out\\style\\\" && xcopy /E /I /Y \"src\\utils\\*\" \"out\\utils\\\" && xcopy /E /I /Y \"src\\assets\\*\" \"out\\assets\\\"",
 		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
