--- a/.github/workflows/unittestpipeline.yml
+++ b/.github/workflows/unittestpipeline.yml
@@ -1,5 +1,8 @@
 name: Entry Unit Test Pipeline
-on: [push]
+on: 
+  push:
+      branches:
+      - dev
 
 jobs:
   test:
@@ -16,12 +19,6 @@ jobs:
       
       - name: Install Dependencies
         run: npm install
-      
-      - name: Install Xvfb
-        run: sudo apt-get install xvfb
-
-      - name: Start Xvfb
-        run: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
       - name: Run Tests
         run: npm test
