--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "entry",
 	"displayName": "entry",
 	"publisher": "entry",
-	"description": "Write notes for your code",
+	"description": "Makes it easy to write and organize notes for your code, directly in your IDE.",
 	"version": "0.0.93",
 	"engines": {
 		"vscode": "^1.83.0"
