--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
 	"name": "entry",
-	"displayName": "entry",
-	"publisher": "entry",
-	"description": "Makes it easy to write and organize notes for your code, directly in your IDE.",
+	"displayName": "Entry",
+	"publisher": "Entry",
+	"description": "Makes it easy to write and organize notes for your code directly in VSC.",
 	"version": "0.0.93",
 	"engines": {
 		"vscode": "^1.83.0"
 	},
+	"repository": {
+        "type": "GitHub",
+        "url": "https://github.com/Chri704r/entry)"
+    },
 	"categories": [
 		"Other"
 	],
@@ -42,7 +46,7 @@
 			},
 			{
 				"view": "entry-documentation",
-				"contents": "Entry was built to supercharge the notetaking experience in VSCode. \nLearn more about the project on [GitHub](https://github.com/Chri704r/entry)."
+				"contents": "Entry was built to supercharge the notetaking experience in VS Code. \nLearn more about the project on [GitHub](https://github.com/Chri704r/entry)."
 			}
 		],
 		"commands": [
