--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"repository": {
         "type": "GitHub",
-        "url": "https://github.com/Chri704r/entry)"
+        "url": "https://github.com/Chri704r/entry"
     },
 	"categories": [
 		"Other"
